Fix 'greater than sm visibility helper.

--- a/css/_visibility_helpers.styl
+++ b/css/_visibility_helpers.styl
@@ -113,9 +113,9 @@
   @media md 
     display: none !important
   @media sm
-    display: none !important
+    display: block !important
   @media xs 
-    display: none !important
+    display: block !important
 
 .hidden-gt-sm-inline
   display: inline-block
